--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Crud com qualidade",
   "main": "index.js",
   "scripts": {
-    "start" : "node .core/crud.js",
-    "dev": "nodemon ./core/crud.js",
+    "start:crud": "npx ts-node ./core/crud.ts",
+    "dev:crud": "nodemon --ext ts,tsx --exec 'npm run start:crud'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "@types/node": "^20.4.4",
+    "typescript": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
