--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
   "scripts": {
     "start:crud": "npx ts-node ./core/crud.ts",
     "dev:crud": "nodemon --ext ts,tsx --exec 'npm run start:crud'",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "18.2.17",
     "@types/uuid": "^9.0.2",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@types/node": "^20.4.4",
+    "next": "^13.4.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   }
